adicionada navegação para registro de senha

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.77.1",
     "react-native-gesture-handler": "^2.23.1",
     "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.8.0"
+    "react-native-screens": "^4.8.0",
+    "react-native-svg": "^15.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
