--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nozbe/watermelondb": "^0.27.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
@@ -17,12 +18,14 @@
     "react": "18.3.1",
     "react-native": "0.77.1",
     "react-native-gesture-handler": "^2.23.1",
+    "react-native-mmkv-storage": "^0.11.2",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.8.0",
     "react-native-svg": "^15.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-proposal-decorators": "^7.25.9",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
     "@react-native-community/cli": "15.0.1",
